// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tweet.vue button click 1`] = `
<div class="user-profile">
  <div class="user-profile__user-panel">
    <h1>@みわ</h1>
    <div><strong>followers: 1 </strong> <button>follow</button></div>
    <form class="user-profile__create-tweet-panel"><label class="newTweet"><strong>New Tweet</strong></label> <textarea rows="4"></textarea>
      <div><button>Tweet</button></div>
    </form>
  </div>
  <div class="user-profile__tweets-wrapper">
    <div>
      <div class="user-profile__tweets-wrapper__tweet-item">
        <p>test1</p>
      </div>
    </div>
    <div>
      <div class="user-profile__tweets-wrapper__tweet-item">
        <p>test2</p>
      </div>
    </div>
    <div>
      <div class="user-profile__tweets-wrapper__tweet-item">
        <p>test3</p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tweet.vue renders props.msg when passed 1`] = `
<div class="user-profile">
  <div class="user-profile__user-panel">
    <h1>@みわ</h1>
    <div><strong>followers: 0 </strong> <button>follow</button></div>
    <form class="user-profile__create-tweet-panel"><label class="newTweet"><strong>New Tweet</strong></label> <textarea rows="4"></textarea>
      <div><button>Tweet</button></div>
    </form>
  </div>
  <div class="user-profile__tweets-wrapper">
    <div>
      <div class="user-profile__tweets-wrapper__tweet-item">
        <p>test1</p>
      </div>
    </div>
    <div>
      <div class="user-profile__tweets-wrapper__tweet-item">
        <p>test2</p>
      </div>
    </div>
    <div>
      <div class="user-profile__tweets-wrapper__tweet-item">
        <p>test3</p>
      </div>
    </div>
  </div>
</div>
`;
